Updated PaySwarm Roadmap and placed it on the front page.

--- a/index.xhtml
+++ b/index.xhtml
@@ -103,6 +103,13 @@ Listed below are the documents and resources that describe the PaySwarm work
 in more detail.
 </p>
 
+<h3>PaySwarm Roadmap</h3>
+
+<p>
+The <a href="roadmap.xhtml">PaySwarm Roadmap</a> outlines the path from 
+where we are today, to W3C standardization and beyond.
+</p>
+
 <h3>PaySwarm FAQ</h3>
 
 <p>
