--- a/roadmap.xhtml
+++ b/roadmap.xhtml
@@ -4,9 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <title>PaySwarm @ Digital Bazaar</title>
+  <title>PaySwarm Roadmap @ Digital Bazaar</title>
   <link rel="stylesheet" type="text/css" href="http://www.w3.org/Guide/guide2006.css" />
-  <link rel="shortcut icon" type="image/png" href="/images/payswarm-icon.png" />
 </head>
 <body>
 <script type="text/javascript">
@@ -24,114 +23,57 @@
 </script>
 
       <p style="text-align:justify; text-justify: distribute-all-lines; height: 150px; font-family: Georgia, sans-serif; font-size: 200%;  font-style: italic;">
-<img style="vertical-align: top; float: left; padding: 3px 3px 0px 3px;" src="images/payswarm.png" 
-     alt="PaySwarm logo"/>
+<a href="http://payswarm.com/"><img style="vertical-align: top; float: left; padding: 3px 3px 0px 3px;" src="images/payswarm.png" 
+     alt="PaySwarm logo"/></a>
 
 The PaySwarm web platform is an open standard that enables web browsers and web 
 devices to perform micropayments and copyright-aware, peer-to-peer digital 
 media distribution. 
       </p>
 
-        <h3>What does PaySwarm do?</h3>
+        <h3>PaySwarm Roadmap</h3>
         <p>
-PaySwarm enables people that create digital content to distribute it through
-the Web and receive payment directly from their fans and customers. It is
-also designed to help fans and customers distribute digital content 
-on behalf of the content creators in a way that is both legal and financially
-beneficial to the creators, fans and customers. The technology is designed to 
-be integrated directly into web devices, finally making legal digital content 
-distribution a first-class citizen on the web.
-        </p>
-        <h3>What is an open web platform?</h3>
-        <p>
-An open web platform is a combination of technology that is patent-free, 
-royalty-free, published in a free specification, using well-defined 
-protocols and other open technologies. The combination of open technology
-to accomplish a particular set of related tasks on the web defines an
-"open web platform".
+The PaySwarm roadmap outlines all of the expected milestones that must be 
+completed in order for the PaySwarm specification to become an official 
+World Wide Web Consortium standard. The timeline also outlines what it would
+take for the standard to become successful in the marketplace. 
+Items are struck from the list as they are completed.
         </p>
 
-        <h3>What is a Micropayment?</h3>
-        <p>
-The term micropayment is used loosely, as we don't want to bother the
-customer to reach for their wallet every time they need to spend a
-couple of cents, or even a couple of dollars. Micropayment in this case,
-specifically refers to the ability to divvy royalties and payments in
-increments of up to 1/10,000th of a cent to various royalty and payment
-accounts as listed in the digital contracts.
-        </p>
-
-        <h3>Who can implement and use the technology?</h3>
-
-        <p>
-Anyone. The entire PaySwarm standard is implementable on a patent and 
-royalty-free basis, just like HTTP, HTML 4.01 and 
-Javascript. This means 
-that anybody may implement any part of the system without worrying about 
-technology licensing fees or patent suits from any of the participating W3C 
-member companies.
-        </p>
-
-<h2 id="intro-video">Video Introduction to PaySwarm</h2>
-
-<object width="873" height="525">
-<param value="http://www.youtube.com/v/z8d5J0SgEvg&#38;ap=%2526fmt%3D22" name="movie" /><param value="window" name="wmode" />
-<param value="true" name="allowFullScreen" /><embed width="873" height="525" wmode="window" allowfullscreen="true" type="application/x-shockwave-flash" src="http://www.youtube.com/v/Z8d5J0SgEvg&#38;ap=%2526fmt%3D22"></embed></object>
-
-<h2 id="collaborate">Collaborate</h2>
-
-<p>
-You can affect the future of PaySwarm by collaborating with the open community
-that is involved with designing and implementing this technology. There are
-no qualifications necessary to join the group - if you're interested in
-digital content distribution, peer-to-peer development, media, digital culture or
-the Web, join us. There are a few ways that you can keep up with what is going
-on as well as take part in designing the future of digital content distribution
-on the web:
-</p>
+<h3>The PaySwarm 1.0 Standardization Process</h3>
 
 <ul>
-  <li><a href="http://payswarm.com/listinfo/payswarm-dev">PaySwarm Development</a> - The mailing list where all design and implementation discussion happens.</li>
-  <li><a href="http://twitter.com/payswarm">@payswarm</a> on Twitter - A twitter stream that summarizes the latest PaySwarm news.</li>
-  <li><a href="irc://irc.freenode.net/payswarm">#payswarm</a> on IRC - Real-time PaySwarm chat on <a href="http://freenode.net/">FreeNode</a>. You can <a href="http://webchat.freenode.net/?channels=#payswarm">use a web browser to connect</a>.</li>
+<li><s>Implement complete reference implementation of PaySwarm 1.0 spec.</s> -- November 30th, 2009</li>
+<li><s>Complete first draft of PaySwarm Use Cases document.</s> -- December 24th 2010</li>
+<li><s>Finish first draft of PaySwarm FAQ.</s>  -- January 15th, 2010</li>
+<li><s>Release reference implementation as open source.</s> -- February, 1st, 2010</li>
+<li><s>Release short introductory video for PaySwarm technology.</s> -- February 22nd, 2010</li>
+<li><s>Create PaySwarm community mailing lists, IRC channels and Twitter streams.</s> -- March 2nd, 2010</li>
+<li>Gather support in music, newspaper and television industries to standardize work at W3C. -- ongoing</li>
+<li>Create a PaySwarm Working Group at the World Wide Web Consortium.</li>
+<li>Publish the PaySwarm Use Cases document as a W3C Note.</li>
+<li>Publish the First Public Working Draft of PaySwarm Web API 1.0.</li>
+<li>Publish the First Public Working Draft of Web API Discovery 1.0.</li>
+<li>Refine and extend PaySwarm to meet the digital content industry's business needs.</li>
+<li>Publish the Last Call for PaySwarm Web API 1.0.</li>
+<li>Publish the Last Call for Web API Discovery 1.0.</li>
+<li>Refine documents under guidance from digital content industry.</li>
+<li>Enter Candidate Recommendation phase for PaySwarm Web API 1.0 and Web API Discovery 1.0.</li>
+<li>Call for two interoperable implementations begins.</li>
+<li>Digital Bazaar will provide the first implementation.</li>
+<li>Another individual or organization will provide the second implementation.</li>
+<li>Enter Proposed Recommendation phase for PaySwarm Web API 1.0 and Web API Discovery 1.0.</li>
+<li>Publish PaySwarm Web API 1.0 and Web API Discovery 1.0 as a W3C Recommendation</li>
 </ul>
 
-<h2>Documents</h2>
+<h3>PaySwarm 1.0 in the Marketplace</h3>
 
-<p>
-Listed below are the documents and resources that describe the PaySwarm work
-in more detail.
-</p>
-
-<h3>PaySwarm FAQ</h3>
-
-<p>
-The <a href="specs/payswarm-faq.html">PaySwarm FAQ</a> covers a list of 
-frequently asked questions about the PaySwarm standardization work.
-</p>
-
-<h3>PaySwarm Use Cases</h3>
-
-<p>
-The <a href="specs/payswarm-use-cases.html">PaySwarm Use Cases</a> are the core
-scenarios that are the basis for the PaySwarm Web API and Payment and
-Transaction processing environment.
-</p>
-
-<h3>PaySwarm 1.0 Web API Specification</h3>
-
-<p>
-The <a href="specs/payswarm-web-api.html">PaySwarm Web API Specification</a>
-defines the details of interfacing with PaySwarm networks.
-</p>
-
-<h3>Web API Discovery Specification</h3>
-
-<p>
-The <a href="specs/web-api-discovery.html">Web API Discovery Specification</a>
-defines a mechanism and vocabulary for software agents that may be used to automatically discover Web APIs using standard markup technologies - HTML and RDFa.
-</p>
-
+<ul>
+<li>Help browser vendors to implement the Buyer and Seller portions of the PaySwarm standard.</li>
+<li>Help music players to implement Buyer/Seller portions of the PaySwarm standard.</li>
+<li>Help other open-source projects to implement Buyer/Seller portions of the PaySwarm standard.</li>
+<li>Gather feedback from performance and experience in the marketplace for PaySwarm 2.0 Working Group.</li>
+</ul>
 
 </body>
 </html>
