Removed .xhtml and .html extensions from pages

--- a/index.xhtml
+++ b/index.xhtml
@@ -106,21 +106,21 @@ in more detail.
 <h3>PaySwarm Roadmap</h3>
 
 <p>
-The <a href="roadmap.xhtml">PaySwarm Roadmap</a> outlines the path from 
+The <a href="roadmap">PaySwarm Roadmap</a> outlines the path from 
 where we are today, to W3C standardization and beyond.
 </p>
 
 <h3>PaySwarm FAQ</h3>
 
 <p>
-The <a href="specs/payswarm-faq.html">PaySwarm FAQ</a> covers a list of 
+The <a href="specs/payswarm-faq">PaySwarm FAQ</a> covers a list of 
 frequently asked questions about the PaySwarm standardization work.
 </p>
 
 <h3>PaySwarm Use Cases</h3>
 
 <p>
-The <a href="specs/payswarm-use-cases.html">PaySwarm Use Cases</a> are the core
+The <a href="specs/payswarm-use-cases">PaySwarm Use Cases</a> are the core
 scenarios that are the basis for the PaySwarm Web API and Payment and
 Transaction processing environment.
 </p>
@@ -128,14 +128,14 @@ Transaction processing environment.
 <h3>PaySwarm 1.0 Web API Specification</h3>
 
 <p>
-The <a href="specs/payswarm-web-api.html">PaySwarm Web API Specification</a>
+The <a href="specs/payswarm-web-api">PaySwarm Web API Specification</a>
 defines the details of interfacing with PaySwarm networks.
 </p>
 
 <h3>Web API Discovery Specification</h3>
 
 <p>
-The <a href="specs/web-api-discovery.html">Web API Discovery Specification</a>
+The <a href="specs/web-api-discovery">Web API Discovery Specification</a>
 defines a mechanism and vocabulary for software agents that may be used to automatically discover Web APIs using standard markup technologies - HTML and RDFa.
 </p>
 
