Added community and meetings to payswarm website.

--- a/index.xhtml
+++ b/index.xhtml
@@ -94,6 +94,7 @@ on the web:
   <li><a href="http://payswarm.com/listinfo/payswarm-dev">PaySwarm Development</a> - The mailing list where all design and implementation discussion happens.</li>
   <li><a href="http://twitter.com/payswarm">@payswarm</a> on Twitter - A twitter stream that summarizes the latest PaySwarm news.</li>
   <li><a href="irc://irc.freenode.net/payswarm">#payswarm</a> on IRC - Real-time PaySwarm chat on <a href="http://freenode.net/">FreeNode</a>. You can <a href="http://webchat.freenode.net/?channels=#payswarm">use a web browser to connect</a>.</li>
+  <li><a href="community/meetings/">Audio Records of Meetings</a> - We keep a complete audio log of all PaySwarm meetings available to anyone that is interested.</li>
 </ul>
 
 <h2>Documents</h2>
