Added contract and focusing intro more.

--- a/slides/intro/index.xhtml
+++ b/slides/intro/index.xhtml
@@ -40,10 +40,19 @@
 </div>
 
 <div class="slide"> 
-  <h1>The End-Goal of PaySwarm</h1> 
+  <h1>PaySwarm Introductory Video</h1> 
+  <div style="text-align: center;">
+   <object width="873" height="525">
+<param value="http://www.youtube.com/v/z8d5J0SgEvg&#38;ap=%2526fmt%3D22" name="movie" /><param value="window" name="wmode" />
+<param value="true" name="allowFullScreen" /><embed width="873" height="525" wmode="window" allowfullscreen="true" type="application/x-shockwave-flash" src="http://www.youtube.com/v/Z8d5J0SgEvg&#38;ap=%2526fmt%3D22"></embed></object>
+  </div>
+</div>
+
+<div class="slide"> 
+  <h1>The Goal of PaySwarm</h1> 
 
   <p style="font-weight: bold; font-style: italic;">
-"The PaySwarm web platform is an open standard that enables web browsers and web devices to perform micropayments and copyright-aware, peer-to-peer digital media distribution."
+"The PaySwarm web platform is an open standard that enables web browsers and web devices to acquire licenses, collect micropayments and perform copyright-aware digital media distribution."
   </p>
 
   <ul class="incremental">
@@ -52,11 +61,11 @@ The patent and royalty-free standard would be implemented in all major web brows
     </li>
 
     <li>
-PaySwarm would turn 1.7 billion web browsers into a point-of-sale for music and video content.
+PaySwarm would turn 1.7 billion web browsers into a point-of-sale for digital content (images, music, video, and data).
     </li>
 
     <li>
-Music labels would retain all rights and can set royalties and prices at will.
+Content owners would retain all rights and can set royalties and prices at will.
     </li>
 
     <li>
@@ -126,14 +135,39 @@ standard.
   <h1>Half-way break - Any questions?</h1>
 
   <ul>
-    <li>A purchase example is next...</li>
+    <li>What's up next?
+      <ul>
+      <li>License-only Purchase</li>
+      <li>License and Data Purchase</li>
+      </ul>
+    </li>
   </ul>
   <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div>
 
 <div class="slide"> 
-  <h1>A Typical PaySwarm Purchase - The Participants</h1>
+  <h1>PaySwarm License Purchase - The Participants</h1>
+  <div style="text-align: center;">
+   <img src="lo-participants.png" width="80%"
+     alt=""/>
+  </div>
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
+</div>
+
+<div class="slide"> 
+  <h1>PaySwarm License Purchase - The Concepts</h1>
+  <div style="text-align: center;">
+   <img src="lo-concepts.png" width="80%"
+     alt=""/>
+  </div>
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
+</div>
+
+<div class="slide"> 
+  <h1>PaySwarm Data Purchase - The Participants</h1>
   <div style="text-align: center;">
    <img src="pp-participants.png" width="80%"
      alt=""/>
@@ -143,7 +177,7 @@ standard.
 </div>
 
 <div class="slide"> 
-  <h1>A Typical PaySwarm Purchase - The Concepts</h1> 
+  <h1>PaySwarm Data Purchase - The Concepts</h1> 
   <div style="text-align: center;">
    <img src="pp-concepts.png" width="80%"
      alt=""/>
@@ -153,7 +187,7 @@ standard.
 </div>
 
 <div class="slide"> 
-  <h1>A Typical PaySwarm Purchase - Overview</h1> 
+  <h1>PaySwarm Data Purchase - Overview</h1> 
   <div style="text-align: center;">
    <img src="pp-overview.png" width="80%"
      alt=""/>
@@ -163,7 +197,7 @@ standard.
 </div>
 
 <div class="slide"> 
-  <h1>A Typical PaySwarm Purchase</h1> 
+  <h1>PaySwarm Data Purchase</h1> 
   <div style="text-align: center;">
    <img src="pp-step1.png" width="80%"
      alt=""/>
@@ -173,7 +207,7 @@ standard.
 </div>
 
 <div class="slide"> 
-  <h1>A Typical PaySwarm Purchase</h1> 
+  <h1>PaySwarm Data Purchase</h1> 
   <div style="text-align: center;">
    <img src="pp-step2.png" width="80%"
      alt=""/>
@@ -183,7 +217,7 @@ standard.
 </div>
 
 <div class="slide"> 
-  <h1>A Typical PaySwarm Purchase</h1> 
+  <h1>PaySwarm Data Purchase</h1> 
   <div style="text-align: center;">
    <img src="pp-step3.png" width="80%"
      alt=""/>
@@ -193,7 +227,7 @@ standard.
 </div>
 
 <div class="slide"> 
-  <h1>A Typical PaySwarm Purchase</h1> 
+  <h1>PaySwarm Data Purchase</h1> 
   <div style="text-align: center;">
    <img src="pp-step4.png" width="80%"
      alt=""/>
@@ -203,7 +237,7 @@ standard.
 </div>
 
 <div class="slide"> 
-  <h1>A Typical PaySwarm Purchase</h1> 
+  <h1>PaySwarm Data Purchase</h1> 
   <div style="text-align: center;">
    <img src="pp-step5.png" width="80%"
      alt=""/>
@@ -213,7 +247,7 @@ standard.
 </div>
 
 <div class="slide"> 
-  <h1>A Typical PaySwarm Purchase</h1> 
+  <h1>PaySwarm Data Purchase</h1> 
   <div style="text-align: center;">
    <img src="pp-step6.png" width="80%"
      alt=""/>
@@ -223,7 +257,7 @@ standard.
 </div>
 
 <div class="slide"> 
-  <h1>A Typical PaySwarm Purchase</h1> 
+  <h1>PaySwarm Data Purchase</h1> 
   <div style="text-align: center;">
    <img src="pp-step7.png" width="80%"
      alt=""/>
