Moving slides around to make them more modular, easier to understand.

--- a/slides/intro/index.xhtml
+++ b/slides/intro/index.xhtml
@@ -34,13 +34,13 @@
   Twitter: <a href="http://twitter.com/manusporny">@manusporny</a><br />
   Skype: msporny<br />
  </p>
- <div><img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+ <div><img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
   alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" /> 
  </div>
 </div>
 
-<div class="slide"> 
-  <h1>PaySwarm Introductory Video</h1> 
+<div class="slide">
+  <h1>PaySwarm Introductory Video</h1>
   <div style="text-align: center;">
    <object width="873" height="525">
 <param value="http://www.youtube.com/v/z8d5J0SgEvg&#38;ap=%2526fmt%3D22" name="movie" /><param value="window" name="wmode" />
@@ -73,7 +73,7 @@ Sounds great, but how do we accomplish this?
     </li>
   </ul>
 
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div> 
 
@@ -99,7 +99,7 @@ There is interest at W3C for the PaySwarm work, but standardization doesn't begi
 
   </ul>
 
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div> 
 
@@ -127,145 +127,20 @@ standard.
 
   </ul>
 
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div> 
 
 <div class="slide"> 
-  <h1>Half-way break - Any questions?</h1>
+  <h1>Learn More about PaySwarm</h1>
 
   <ul>
-    <li>What's up next?
-      <ul>
-      <li>License-only Purchase</li>
-      <li>License and Data Purchase</li>
-      </ul>
-    </li>
+    <li>Learn about <a href="../oauth-payswarm/">Simple PaySwarm</a> (OAuth/Server-based)</li>
+    <li>Learn about <a href="../full-payswarm/">Distributed PaySwarm</a> (Browser-based)</li>
   </ul>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
     alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
 </div>
-
-<div class="slide"> 
-  <h1>PaySwarm License Purchase - The Participants</h1>
-  <div style="text-align: center;">
-   <img src="lo-participants.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>PaySwarm License Purchase - The Concepts</h1>
-  <div style="text-align: center;">
-   <img src="lo-concepts.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>PaySwarm Data Purchase - The Participants</h1>
-  <div style="text-align: center;">
-   <img src="pp-participants.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>PaySwarm Data Purchase - The Concepts</h1> 
-  <div style="text-align: center;">
-   <img src="pp-concepts.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>PaySwarm Data Purchase - Overview</h1> 
-  <div style="text-align: center;">
-   <img src="pp-overview.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>PaySwarm Data Purchase</h1> 
-  <div style="text-align: center;">
-   <img src="pp-step1.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>PaySwarm Data Purchase</h1> 
-  <div style="text-align: center;">
-   <img src="pp-step2.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>PaySwarm Data Purchase</h1> 
-  <div style="text-align: center;">
-   <img src="pp-step3.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>PaySwarm Data Purchase</h1> 
-  <div style="text-align: center;">
-   <img src="pp-step4.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>PaySwarm Data Purchase</h1> 
-  <div style="text-align: center;">
-   <img src="pp-step5.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>PaySwarm Data Purchase</h1> 
-  <div style="text-align: center;">
-   <img src="pp-step6.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
-<div class="slide"> 
-  <h1>PaySwarm Data Purchase</h1> 
-  <div style="text-align: center;">
-   <img src="pp-step7.png" width="80%"
-     alt=""/>
-  </div>
-  <img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
-    alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" />
-</div>
-
 
 <div class="slide end"> 
  <h1>Comments and Concerns</h1> 
@@ -281,7 +156,7 @@ standard.
   Twitter: <a href="http://twitter.com/manusporny">@manusporny</a><br />
   Skype: msporny<br />
  </p>
- <div><img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="db-logo-square.png" 
+ <div><img style="position:absolute; bottom: 0; right: 10px; width: 10%;" src="../../images/db-logo-square.png" 
   alt="Digital Bazaar Logo - lower case letters d and b together in white lettering on blue rectangle with curved corners background" class="cover" /> 
  </div>
 </div>
