Added presentations and slides to PaySwarm home page.

--- a/index.xhtml
+++ b/index.xhtml
@@ -104,6 +104,14 @@ Listed below are the documents and resources that describe the PaySwarm work
 in more detail.
 </p>
 
+<h3>PaySwarm Presentations and Slides</h3>
+
+<ul>
+  <li><a href="slides/intro/">An Introduction to PaySwarm</a></li>
+  <li><a href="slides/oauth-payswarm/">Simple, Server-based PaySwarm</a> (via OAuth)</li>
+  <li><a href="slides/full-payswarm/">Browser-based PaySwarm</a></li>
+</ul>
+
 <h3>PaySwarm Roadmap</h3>
 
 <p>
